--- a/content/B078K4K423-de.md
+++ b/content/B078K4K423-de.md
@@ -22,6 +22,14 @@ Está [LEGO 60198 City Güterzug  Set mit batteriebetriebenem Motor für Kinder 
 
 [![LEGO 60198 City Güterzug  Set mit batter](https://m.media-amazon.com/images/I/61oxQDY+rlL._SL200_.jpg)](https://www.amazon.de/dp/B078K4K423/?tag=tolees0ca-21)
 
+Principales características:
+
+- Enthält eine Leitstelle mit Leiter und Signalleuchten, eine komplette Eisenbahnstrecke aus 16 gekrümmten und 16 geraden Schienensegmenten sowie einer Weiche mit Hebel, einen Geldtransporter mit aufklappbaren Türen und einen funktionstüchtigen Gabelstapler mit aufklappbarem Überrollbügel
+- Außerdem gibt es einen Holzwaggon, einen Kranwaggon mit dreh- und ausfahrbarem Ausleger sowie einen Containerwaggon Oben an den beiden Containern, die mit Paletten beladen werden können, befinden sich Transportösen zum Verladen
+- Enthält eine motorisierte Lok mit Bluetooth-Fernsteuerung (10 Geschwindigkeitsstufen), Stromabnehmer auf dem Dach und Führerstand mit Bedienpult
+- Als Zubehör sind ein Schraubenschlüssel, 12 Goldbarren und 4 Geldscheine sowie 2 baubare Paletten, 3 Baumstämme und ein Schneemotorrad enthalten
+- Enthält 6 LEGO Minifiguren: 4 Bahnarbeiter, einen Sicherheitsmann und einen Ganoven
+
 [Ver la oferta!!](https://www.amazon.de/dp/B078K4K423/?tag=tolees0ca-21)
 
 Links participate in Amazon Associate program and might generate a comission on qualifying sales
