--- a/content/B079Z63G1F-fr.md
+++ b/content/B079Z63G1F-fr.md
@@ -22,6 +22,12 @@ Ahora mismo tienes [LEGO City Switch 60238 Train Jouet](https://www.amazon.fr/dp
 
 [![LEGO City Switch 60238 Train Jouet](https://m.media-amazon.com/images/I/51gfOlRuTpL._SL200_.jpg)](https://www.amazon.fr/dp/B079Z63G1F/?tag=tolees0d-21)
 
+Características:
+
+- Les ensembles LEGO City sont compatibles avec tous les ensembles de construction LEGO pour une expérience de construction sans limite
+- Contient 4 segments de rail incurvés, 1 aiguillage menant à droite et 1 aiguillage menant à gauche.
+- Reliez les segments ferroviaires aux lignes ferroviaires de vos ensembles existants tels que le train de marchandises LEGO City 60198 pour découvrir encore plus de construction et jouer.
+
 [Visítala!!!](https://www.amazon.fr/dp/B079Z63G1F/?tag=tolees0d-21)
 
 Links participate in Amazon Associate program and might generate a comission on qualifying sales
