--- a/content/B078K44BP8-de.md
+++ b/content/B078K44BP8-de.md
@@ -22,6 +22,14 @@ Está [LEGO 60197 City Personenzug mit batteriebetriebenem Motor  ferngesteuerte
 
 [![LEGO 60197 City Personenzug mit batterie](https://m.media-amazon.com/images/I/51zCOhN1t9L._SL200_.jpg)](https://www.amazon.de/dp/B078K44BP8/?tag=tolees0ca-21)
 
+Principales características:
+
+- Nimm das Dach ab, um Zugang zu all den coolen Details in den Personenwagen zu erhalten
+- Enthält 4 LEGO Minifiguren: 2 Passagiere, einen Zugschaffner und einen Zugbegleiter
+- Ebenfalls enthalten ist ein Bahnsteig mit 2 Sitzen und Streckenplan, eine Rundstrecke mit 16 gekrümmten und 4 geraden Schienensegmenten sowie ein baubarer Eisenbahnsignalmast
+- Das Zubehör umfasst 3 Becher, 3 Muffins, einen Hotdog, ein Croissant, eine Umhängetasche und einen Koffer, in dem eine LEGO Box eingepackt ist
+- Enthält eine motorisierte Lok mit Bluetooth-Fernsteuerung (10 Geschwindigkeitsstufen) und aufklappbarer Spitze, Stromabnehmer auf dem Dach und Lokführerkabine samt aufklappbarem Fenster und Bedienpult Zudem gibt es ein Bordcafé mit abnehmbarem Dach und Tischen sowie einen Personenwagen mit abnehmbaren Dach, Sitzen und Tischen
+
 [Ver la oferta!!](https://www.amazon.de/dp/B078K44BP8/?tag=tolees0ca-21)
 
 Links participate in Amazon Associate program and might generate a comission on qualifying sales
