--- a/content/B0813R6J5K-de.md
+++ b/content/B0813R6J5K-de.md
@@ -22,6 +22,14 @@ Ahora mismo tienes [LEGO 70434 Hidden Side Übernatürlicher Rennwagen  Spielzeu
 
 [![LEGO 70434 Hidden Side Übernatürlicher R](https://m.media-amazon.com/images/I/515ZLEa8plL._SL200_.jpg)](https://www.amazon.de/dp/B0813R6J5K/?tag=tolees0ca-21)
 
+Características:
+
+- Dieses Lego AR-Set kann als eigenständiges Spielzeug verwendet werden, Für ein umfassendes Erlebnis ist jedoch ein intelligentes Gerät erforderlich (nicht im Lieferumfang enthalten)
+- Enthält Jack, Vaughn Geist und Schattenläufer als Minifiguren und Spencer als zusätzliche Hundefigur und ist für Kinder ab 7 Jahren geeignet
+- Verfügt über einen mit Waffen bewaffneten Rennwagenspielzeug sowie austauschbare Räder, einen übergroßen Motor und Auspuff, Geisteraufkleber und Platz für eine Minifigur
+- Der Lego Rennwagen verwandelt sich, wenn er über die AR-App betrachtet wird, in der Kinder in einer heimgesuchten digitalen Welt gegen Geisterboss Maxine Turbo kämpfen können
+- Weitere Informationen zur kostenlosen Lego Hidden Side AR-App und zur Eignung für Smart-Geräte finden Sie in der Produktbeschreibung
+
 [Visítala!!!](https://www.amazon.de/dp/B0813R6J5K/?tag=tolees0ca-21)
 
 Links participate in Amazon Associate program and might generate a comission on qualifying sales
