--- a/content/1943328803-com.md
+++ b/content/1943328803-com.md
@@ -26,4 +26,4 @@ There's a deal [Build It! Volume 1: Make Supercool Models with Your LEGO® Class
 ℹ️:
 
 
-[Buy it now!!](https://www.amazon.com/dp/1943328803/?tag=tolees-20)
+[🛒 Buy it now!!](https://www.amazon.com/dp/1943328803/?tag=tolees-20)
